# jsonrpc-c

example/: Makefile.am  syncli.c
include/: Makefile.am  cJSON.h  jsonrpc-ccli.h
src/: Makefile.am  jsonrpc-ccli.c
